--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^10.0.2",
     "@prisma/client": "^6.2.1",
+    "cors": "^2.8.5",
     "fastify": "^5.2.1"
   },
   "devDependencies": {
